@@ -92,6 +92,7 @@ public:
 	uint16 scribespells(uint8 max_level, uint8 min_level = 1);
 	uint16 traindiscs(uint8 max_level, uint8 min_level = 1);
 	void unscribespells();
+	void untraindiscs();
 	void givecash(int copper, int silver, int gold, int platinum);
 	void pvp(const char *mode);
 	void movepc(int zone_id, float x, float y, float z, float heading);
